--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=3c69ece9e2d197625efa
+github.client.secret=369ac1e1435ae0fa6c6b4b2cd220750c4b549bdd
+github.redirect.uri=http://localhost:8887/callback
