--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8887
 github.client.id=3c69ece9e2d197625efa
 github.client.secret=369ac1e1435ae0fa6c6b4b2cd220750c4b549bdd
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/database/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
